crates/runner/tests/snapshots/dep_graph_test__run_target_if_touched__skips_if_untouched_project.snap
---
source: crates/action-runner/tests/dep_graph_test.rs
assertion_line: 355
expression: graph.to_dot()
---
digraph {
    0 [ label="SetupNodeToolchain(16.17.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="InstallNodeDeps(16.17.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="SyncNodeProject(inputA)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="RunTarget(inputA:a)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 0 [ arrowhead=box, arrowtail=box]
    2 -> 0 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 2 [ arrowhead=box, arrowtail=box]
}

